force-app/main/default/objects/Account_Agent__c.object
<CustomObject>
    <description>Junction Object to relate Client Accounts and Agents</description>
    <fields>
        <fullName>Account_Agency__c</fullName>
        <label>Account Agency</label>
        <referenceTo>Account_Agency__c</referenceTo>
        <relationshipLabel>Agents</relationshipLabel>
        <relationshipName>Account_Agents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <formula>Account_Agency__r.Agency_Name__c</formula>
        <label>Agency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <formula>Agent__r.FirstName &amp;&quot; &quot;&amp; Agent__r.LastName</formula>
        <label>Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Agents</relationshipLabel>
        <relationshipName>Account_Agents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agents</relationshipLabel>
        <relationshipName>Account_Agents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <label>Account Agent</label>
    <nameField>
        <displayFormat>RN-{00000000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Agents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>